<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textSize="48sp"
            android:gravity="center"
            android:textColor="@color/light_text_primary"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/editText_pass_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextinputLayout.HintText"
                    android:theme="@style/TextinputLayout.Main"
                    android:hint="@string/enter_password">

                    <EditText
                        android:id="@+id/editText_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textColor="@color/light_text_primary"
                        android:text=""
                        android:importantForAutofill="no"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextinputLayout.HintText"
                    android:theme="@style/TextinputLayout.Main">

                    <EditText
                        android:id="@+id/editText_passconfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:textColor="@color/light_text_primary"
                        android:text=""
                        android:importantForAutofill="no"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:text="@string/go"
                android:background="@drawable/background_light_button_press"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>