...
    <string name="value">Value</string>
    <string name="when">When</string>
    <string name="erc20_tokens">ERC20 TOKENS</string>
    <string name="sender_receiver"><![CDATA[$SENDER$ -> $RECEIVER$]]></string>
    <string name="select_your_favorite_new_account">Select your favorite new Account!</string>
    <string name="reload">RELOAD</string>
    <string name="create">Create</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="go">Go</string>
    <string name="loading_">Loading &#8230;</string>
    <string name="hashing_pw_in_progress">Hashing your password for your own security</string>
    <string name="set_password">Set Password</string>
    <string name="wrong_pw_snackbar">Wrong password</string>
    <string name="pws_not_matching_snackbar">Passwords do not match</string>
    <string name="create_wallet_warn_no_wallet_selected">Please select a Wallet to continue.</string>
...
    <string name="saving_wallet">Saving Wallet</string>
    <string name="wallet_address">Wallet Address</string>
    <string name="copied_address">Copied the address to the clipboard!</string>
    <string name="self">self</string>
    <string name="send">send</string>
    <string name="send_from">FROM</string>
    <string name="send_select_account">select account</string>
    <string name="send_receiver_address">Receiver Address</string>
    <string name="send_amount">Amount</string>
    <string name="send_gas_limit">Gas Limit</string>
    <string name="unit_ETH"> ETH</string>
    <string name="send_fee">Fee</string>
    <string name="send_gas_price_fmt">$SPEED$, $WAIT$ - $PRICE$</string>
...
